# company-finder

./: .gitignore  README.md  docker-compose.yml  skaffold.yaml
app/customer-portal/: .tool-versions  Dockerfile  package.json  pnpm-lock.yaml
app/customer-portal/src/data/: sample.ts
app/customer-portal/src/lib/: api.ts
app/customer-portal/src/lib/components/Info/: InfoItem.svelte
app/customer-portal/src/lib/components/cards/: CompanyCard.svelte  RecommendationCard.svelte
app/customer-portal/src/lib/components/error/: NoData.svelte
app/customer-portal/src/lib/components/footer/: Footer.svelte
app/customer-portal/src/lib/components/navbar/: NavBar.svelte
app/customer-portal/src/lib/pages/: NotFound.svelte  ServerError.svelte
app/customer-portal/src/lib/stores/: companyStore.ts  loadingStore.ts
app/customer-portal/src/lib/types/: company.ts
app/customer-portal/src/lib/utils/: intersectionObserver.ts
app/customer-portal/src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
app/customer-portal/src/routes/companies/: +page.svelte
app/customer-portal/src/routes/errors[code]/: +page.js
app/customer-portal/src/routes/settings/: +page.svelte
k8s/base/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
services/api/company-search/: .gitignore  Dockerfile  main.py  pyproject.toml
services/api/company-search/app/api/company/: router.py
services/api/company-search/app/api/data/: csv_upload_router.py
services/api/company-search/app/utils/: dummy_data.py
(+3 files in other folders)
